Remove: collision from all sights

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -216,8 +216,8 @@ RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=MaterialEditor
 OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_SCARL.BP_Weapon_SCARL
-OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/WeaponSights/M_OpticSight.M_OpticSight
-OpenAssetsAtExit=/Game/Weapons/Sight/asdfasdf/ROMEO8T_red_dot_centered.ROMEO8T_red_dot_centered
+OpenAssetsAtExit=/Game/Weapons/Sight/optic_EOTech_Vudu.optic_EOTech_Vudu
+OpenAssetsAtExit=/Game/Weapons/Sight/SM_Sight_Reddot_Romeo8t.SM_Sight_Reddot_Romeo8t
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -5874,6 +5874,7 @@ TreeViewWidth=0.300000
 /Game/Weapons/SCARL/NewFolasdasder/SCARL_base_1103x_PhysicsAsset.SCARL_base_1103x_PhysicsAsset=1
 /Game/Weapons/SCARL/PHYS_SCARL.PHYS_SCARL=0
 /Game/Weapons/Sight/SM_Sight_Reddot_Romeo8t.SM_Sight_Reddot_Romeo8t=0
+/Game/Weapons/Sight/SM_Sight_Scope_Bravo4.SM_Sight_Scope_Bravo4=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -6541,7 +6542,7 @@ SkinnedMeshComponent=BoxComponent.Collision.Collision,CapsuleComponent.Collision
 MaterialInstanceConstant=
 BP_Weapon_Pickup_AmericanRifle_C=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 StaticMesh=StaticMesh.ImportSettings.Transform
-MeshNaniteSettings=StaticMesh.ImportSettings.Transform
+MeshNaniteSettings=
 BP_SOF_Entire_B_C=BoxComponent.Collision.Collision,SphereComponent.Collision.Collision
 BP_SOF_Entire_E_C=BoxComponent.Collision.Collision,SphereComponent.Collision.Collision
 BP_SOF_C_C=BoxComponent.Collision.Collision,SphereComponent.Collision.Collision,CapsuleComponent.Collision.Collision
