Multiply: tactical laser toggle

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -170,6 +170,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
 +ActionMappings=(ActionName="FireMode",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=B)
 +ActionMappings=(ActionName="Run",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="ToggleTactical",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
