Major: enable PCG, Procedural Content Generation Framework by UE, to create Level Compounds. Compound = Arsenal + CACHEs

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1064,6 +1064,7 @@ UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
 AndroidRuntimeSettings.App Bundles=True
 AndroidRuntimeSettings.Build=True
@@ -3811,6 +3812,11 @@ BP_Pickup_Weapon_AmericanRifle_XY_C.WorldPartition=True
 BP_Pickup_Weapon_AmericanRifle_XY_C.Events=True
 BP_Weapon_AK704_C.High Ready Anims=True
 NiagaraSystem.NiagaraSystem_UserParameters=True
+EditorKeyboardShortcutSettings.CameraCutTrack=True
+EditorKeyboardShortcutSettings.FSequencerTrackFilter_Animated=True
+EditorKeyboardShortcutSettings.FSequencerTrackFilter_ControlRigControls=True
+EditorKeyboardShortcutSettings.FSequencerTrackFilter_ControlRigSelectedControls=True
+EditorKeyboardShortcutSettings.NiagaraParameterMapViewCommands=True
 
 [RootWindow]
 ScreenPosition=X=475.000 Y=0.000
@@ -5428,6 +5434,7 @@ NiagaraScript="\"Object\" "
 NiagaraScriptBase="\"Object\" "
 NiagaraVersionMetaData="\"Object\" "
 BP_Pickup_Weapon_AmericanRifle_XY_C="\"Object.WeaponVars.WeaponStats\" "
+PCGEngineSettings="\"Object\" "
 
 [MessageLog]
 LastLogListing=AssetCheck
@@ -6742,7 +6749,7 @@ LandscapeStreamingProxy=BoxComponent.Collision.Collision,CapsuleComponent.Collis
 SphereComponent=BoxComponent.Collision.Collision,SphereComponent.Collision.Collision,CapsuleComponent.Collision.Collision
 LevelStreamingVolume=BoxComponent.Collision.Collision
 BrushComponent=
-SkeletalMeshComponent=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
+SkeletalMeshComponent=
 BP_FirstPersonCharacter_C=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 CapsuleComponent=
 BP_Weapon_Base_C=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshComponent.Collision.Collision
@@ -6892,6 +6899,7 @@ VersionedNiagaraScriptData=
 NiagaraParameterMap=
 EdGraphNode=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshComponent.Collision.Collision
 BP_Weapon_SCARL_C=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshComponent.Collision.Collision
+PCGEngineSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings.ToggleTactical,InputSettings.Bindings.ActionMappings.SecondaryWeapon,InputSettings.Bindings.ActionMappings.PrimaryWeapon,InputSettings.Bindings.ActionMappings.WeaponDrop,InputSettings.Bindings.ActionMappings.DepressedMuzzle,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MouseWheel,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
