--- a/Saved/Config/WindowsEditor/Engine.ini
+++ b/Saved/Config/WindowsEditor/Engine.ini
@@ -42,6 +42,8 @@ Paths=../../../Engine/Plugins/Editor/UVEditor/Content
 Paths=../../../Engine/Plugins/Editor/SpeedTreeImporter/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/LightMixer/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/ObjectMixer/Content
+Paths=../../../Engine/Plugins/Experimental/GeometryScripting/Content
+Paths=../../../Engine/Plugins/Experimental/PCG/Content
 
 [/Script/UnrealEd.UnrealEdEngine]
 TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/OpenWorld.OpenWorld",Map="/Engine/Maps/Templates/OpenWorld",DisplayName="Open World",Category="OpenWorld")
