--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -4936,6 +4936,20 @@ PhysicsAssetEditor.TimeStamp=2023.09.29-21.14.11
 PhysicsAssetEditor.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2023.09.29-21.14.15
 TextureEditor.LastCompileMethod=Unknown
+GeometryScriptingCore.TimeStamp=2023.11.07-20.49.49
+GeometryScriptingCore.LastCompileMethod=Unknown
+GeometryScriptingEditor.TimeStamp=2023.11.07-20.49.49
+GeometryScriptingEditor.LastCompileMethod=Unknown
+PCG.TimeStamp=2023.11.07-20.49.54
+PCG.LastCompileMethod=Unknown
+PCGEditor.TimeStamp=2023.11.07-20.49.54
+PCGEditor.LastCompileMethod=Unknown
+PCGExternalDataInterop.TimeStamp=2023.11.07-20.49.55
+PCGExternalDataInterop.LastCompileMethod=Unknown
+PCGExternalDataInteropEditor.TimeStamp=2023.11.07-20.49.55
+PCGExternalDataInteropEditor.LastCompileMethod=Unknown
+PCGGeometryScriptInterop.TimeStamp=2023.11.07-20.49.55
+PCGGeometryScriptInterop.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -4990,7 +5004,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Audio
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle,/Game/Weapons
