Add: level teleportation to spawn on ground at front of faction bunker when leaving underground

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Game/bodycamFPSkit/Blueprints/GM_FirstPerson.GM_FirstPerson_C
+GlobalDefaultGameMode=/Game/bodycamFPSkit/Blueprints/GM_FirstPerson_Copy.GM_FirstPerson_Copy_C
 EditorStartupMap=/Game/Levels/Opalseed.Opalseed
 GameDefaultMap=/Game/bodycamFPSkit/Maps/Map_Menu.Map_Menu
+GameInstanceClass=/Game/Levels/GI_Main.GI_Main_C
 
 [/Script/Engine.Engine]
 NearClipPlane=1.000000
