--- a/cashu_devbranch.uproject
+++ b/cashu_devbranch.uproject
@@ -60,6 +60,10 @@
 			"Name": "UltimateLevelArtTool",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/ec0988f250ef49ebaf7852cdfe3e6516"
+		},
+		{
+			"Name": "ModelingToolsEditorMode",
+			"Enabled": true
 		}
 	]
 }
